--- a/deploying_model_on_vertext_ai.ipynb
+++ b/deploying_model_on_vertext_ai.ipynb
@@ -2,7 +2,19 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3407b393",
+   "id": "80569b65",
+   "metadata": {},
+   "source": [
+    "<table align=\"left\">\n",
+    "    <td>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/gcp-tf-review-classification/blob/master/deploying_model_on_vertex_ai.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\"/>Run in Google Colab</a>\n",
+    "    </td>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a822bf18",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -15,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4aef3c0e",
+   "id": "bf5088b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b8e4891",
+   "id": "866c9cce",
    "metadata": {},
    "source": [
     "## Print tensorflow version"
@@ -33,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb915cb5",
+   "id": "3348c8ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b9aa7a8",
+   "id": "8f95ee30",
    "metadata": {},
    "source": [
     "## Authenticate to GCP"
@@ -52,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "317518e7",
+   "id": "65a850b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68952013",
+   "id": "eaa9058b",
    "metadata": {},
    "source": [
     "## Importing required libraries"
@@ -71,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7396c003",
+   "id": "4535e054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91f9b8e4",
+   "id": "be14ad21",
    "metadata": {},
    "source": [
     "## Setting environment variables"
@@ -95,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ec1684",
+   "id": "5b8678dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54a2f595",
+   "id": "002653ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eb2fe03",
+   "id": "8cd15fbd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1367924d",
+   "id": "fd72b3d3",
    "metadata": {},
    "source": [
     "## Downloading the dataset\n",
@@ -141,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79ba2fc",
+   "id": "8674c0a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0415b28e",
+   "id": "17d2063d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e958923b",
+   "id": "d310faf2",
    "metadata": {},
    "source": [
     "## Create a GCS bucket"
@@ -211,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31b5c1e8",
+   "id": "b3b51645",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b284a292",
+   "id": "7d19fae5",
    "metadata": {},
    "source": [
     "## Copy the data"
@@ -236,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f392c1ec",
+   "id": "6d437d26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5cb1bce",
+   "id": "923fe4ce",
    "metadata": {},
    "source": [
     "## Managing json Schema with Pydantic"
@@ -255,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d712d230",
+   "id": "bd9016ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d30dc233",
+   "id": "7fe19ad6",
    "metadata": {},
    "source": [
     "## Creating Vertex AI compatible instances"
@@ -296,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20e9b2b9",
+   "id": "65f6cb8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5135b56",
+   "id": "1c7673bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945b5bd1",
+   "id": "0f633f41",
    "metadata": {},
    "source": [
     "## Writing the data to GCS"
@@ -405,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddb0b0db",
+   "id": "8d94dba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07eb6530",
+   "id": "fe987082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b0a633e",
+   "id": "fcde0f4f",
    "metadata": {},
    "source": [
     "## Creating a Vertex AI dataset"
@@ -440,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4560363a",
+   "id": "292640da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "259561e6",
+   "id": "62370b50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e48520",
+   "id": "f52cbd0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7a4f91b",
+   "id": "729e0d9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5eec17",
+   "id": "3e18a379",
    "metadata": {},
    "source": [
     "## This can take several hours to complete\n",
@@ -536,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29b85353",
+   "id": "1533850c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -544,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0f25681",
+   "id": "6910c7f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddc64f4d",
+   "id": "8e4eb9b3",
    "metadata": {},
    "source": [
     "## Referring to a model async\n",
@@ -572,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108ff469",
+   "id": "bff58e6c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -580,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520eabd6",
+   "id": "9711cc1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fe0311b",
+   "id": "e40ec451",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1885018",
+   "id": "a39f4207",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2788f688",
+   "id": "a76e079d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f62139c0",
+   "id": "d4573b31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0fa2503",
+   "id": "74648794",
    "metadata": {},
    "source": [
     "## Cleanup"
@@ -660,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69c18f2",
+   "id": "33246d7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17d60296",
+   "id": "387ce16b",
    "metadata": {},
    "outputs": [],
    "source": [
