--- a/training_custom_model.ipynb
+++ b/training_custom_model.ipynb
@@ -1,9 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6783ed91",
+   "metadata": {},
+   "source": [
+    "<table align=\"left\">\n",
+    "    <td>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/gcp-tf-review-classification/blob/master/training_custom_model.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\"/>Run in Google Colab</a>\n",
+    "    </td>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ece8896",
+   "id": "9ad9a4db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a91a96",
+   "id": "c1fdb536",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7090be00",
+   "id": "7db8cea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25f65500",
+   "id": "ea0131c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "920d24dc",
+   "id": "5cc199e8",
    "metadata": {},
    "outputs": [],
    "source": [
